Fix scrollbar

--- a/react-frontend/src/Components/ner-accordion/index.css
+++ b/react-frontend/src/Components/ner-accordion/index.css
@@ -1,8 +1,7 @@
 .accordion-container {
     padding: 10px;
-    overflow: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    overflow: hidden;
+    position: relative;
 }
 
 .accordion-container::--webkit-scrollbar {
